Socket.io integration basic

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
   <head>
     <title>Canvas Layout</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <script src="/socket.io/socket.io.js"></script>
+    <script defer src="/javascripts/connect.js"></script>
+    <script defer src="/javascripts/cursor.js"></script>
     <script defer src="/javascripts/quickdraw.js"></script>
+    <script defer src="/javascripts/app.js"></script>
+
   </head>
   <body>
     <div class="grid">
